<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/system_configure_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_target"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_target"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger_max"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_trigger_max"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_trigger"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/radiogroup1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/system_configure_trigger_sms"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/page_system_configure_trigger_SMS" />

            <RadioButton
                android:id="@+id/system_configure_trigger_phone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/page_system_configure_trigger_phone" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_SMS_interval"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_trigger_interval"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_filter_seconds"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_filter_threshold"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/page_system_configure_receiving_antenna_count"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/system_configure_receiving_antenna_count"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
